<resources>
    <string name="app_name">App4Pets</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_pets_hand">Pets</string>

    <!-- Base Activity-->
    <string name="waiting">Aguarde...</string>

    <!-- Login Activity-->
    <string name="message_error_invalid_login">Usuário/Senha invalido</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="label_button_register">CADASTRAR-SE</string>
    <string name="label_button_forgot_password">LEMBRAR SENHA</string>
    <string name="label_button_login">Login</string>
    <string name="logo_content_description">icone com formato de cachorro e em baixo o texto app for pets</string>

    <!-- Register Activity-->
    <string name="message_error_invalid_register">Algo de errado aconteceu,/n tente novamente mais tarde</string>
    <string name="hint_name_register">Nome</string>
    <string name="hint_email_register">E-mail</string>
    <string name="hist_birthiday_register">Data de Nasc.</string>
    <string name="hint_password_register">Senha</string>
    <string name="label_button_register_register">Registrar</string>
    <string name="label_name_item_pets">Anubis</string>
    <string name="title_activity_pet_profile">ScrollingActivity</string>

    <!--Pet Profile Acitivity-->
    <string name="action_settings">Settings</string>
    <string name="lbl_title_breed">Raça</string>
    <string name="lbl_title_specie">Espécie</string>
    <string name="lbl_title_burthiday">Nascimento</string>
    <string name="lbl_title_genre">Gênero</string>
    <string name="txt_breed">Bulldog Francês</string>
    <string name="txt_genre">Macho</string>
    <string name="txt_especie">Canino</string>
    <string name="txt_burthiday">27/11/2018</string>
    <string name="txt_medical">Ficha Médica</string>
    <string name="txt_geolocation">Localização</string>
    <string name="txt_collar_actvivated">Coleira Ativada</string>
    <string name="txt_name_pet">Cão Coragem</string>
    <string name="label_button_pet_alone">PET PERDIDO</string>


    <!-- Pet Create Activity-->
    <string name="label_new_pet">Novo Pet</string>
    <string name="label_send_picture">Enviar foto</string>
    <string name="hint_name_create_pet">Nome</string>
    <string name="label_pet_breed">Raça</string>
    <string name="label_pet_create_burthiday">Nascimento</string>
    <string name="label_pet_create_color">Cor</string>
    <string name="label_button_pet_create_add">Adicionar</string>


</resources>